--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "10692"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "StandardScaler()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
        "KMeans(n_clusters=4, random_state=42)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1633,14 +1633,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/yc/5rjgg5z50b78jfqjfqw0nb1w0000gn/T/ipykernel_21239/3162605017.py:12: FutureWarning: \n",
+      "/var/folders/yc/5rjgg5z50b78jfqjfqw0nb1w0000gn/T/ipykernel_22360/3162605017.py:12: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1805,55 +1805,55 @@
      "output_type": "stream",
      "text": [
       "Mean of Features for Cluster 0:\n",
-      "danceability             0.740427\n",
-      "energy                   0.723555\n",
-      "loudness                -6.214942\n",
-      "speechiness              0.074810\n",
-      "acousticness             0.142186\n",
-      "instrumentalness         0.014222\n",
-      "liveness                 0.148771\n",
-      "valence                  0.679610\n",
-      "tempo                  113.507425\n",
-      "duration_ms         220851.748490\n",
+      "danceability             0.749967\n",
+      "energy                   0.705715\n",
+      "loudness                -6.356785\n",
+      "speechiness              0.135034\n",
+      "acousticness             0.149064\n",
+      "instrumentalness         0.011371\n",
+      "liveness                 0.163004\n",
+      "valence                  0.650860\n",
+      "tempo                  114.067444\n",
+      "duration_ms         220058.703651\n",
       "dtype: float64\n",
       "\n",
       "Mean of Features for Cluster 1:\n",
-      "danceability             0.605361\n",
-      "energy                   0.424801\n",
-      "loudness               -10.515229\n",
-      "speechiness              0.072756\n",
-      "acousticness             0.519441\n",
-      "instrumentalness         0.092746\n",
-      "liveness                 0.148100\n",
-      "valence                  0.392985\n",
-      "tempo                  112.386892\n",
-      "duration_ms         227130.096816\n",
+      "danceability             0.609132\n",
+      "energy                   0.436545\n",
+      "loudness               -10.374419\n",
+      "speechiness              0.091388\n",
+      "acousticness             0.497412\n",
+      "instrumentalness         0.084702\n",
+      "liveness                 0.158093\n",
+      "valence                  0.399183\n",
+      "tempo                  112.972669\n",
+      "duration_ms         226330.339978\n",
       "dtype: float64\n",
       "\n",
       "Mean of Features for Cluster 2:\n",
-      "danceability             0.545907\n",
-      "energy                   0.791561\n",
-      "loudness                -5.320649\n",
-      "speechiness              0.071281\n",
-      "acousticness             0.068075\n",
-      "instrumentalness         0.022933\n",
-      "liveness                 0.172763\n",
-      "valence                  0.379726\n",
-      "tempo                  132.656681\n",
-      "duration_ms         227479.270555\n",
+      "danceability             0.553642\n",
+      "energy                   0.799628\n",
+      "loudness                -5.305196\n",
+      "speechiness              0.087260\n",
+      "acousticness             0.072985\n",
+      "instrumentalness         0.022310\n",
+      "liveness                 0.241298\n",
+      "valence                  0.414800\n",
+      "tempo                  132.590361\n",
+      "duration_ms         226832.848851\n",
       "dtype: float64\n",
       "\n",
       "Mean of Features for Cluster 3:\n",
-      "danceability             0.609649\n",
-      "energy                   0.778875\n",
-      "loudness                -5.985825\n",
-      "speechiness              0.112085\n",
-      "acousticness             0.113838\n",
-      "instrumentalness         0.053069\n",
-      "liveness                 0.611941\n",
-      "valence                  0.509528\n",
-      "tempo                  121.637398\n",
-      "duration_ms         231694.009311\n",
+      "danceability             0.660865\n",
+      "energy                   0.785336\n",
+      "loudness                -6.946329\n",
+      "speechiness              0.072148\n",
+      "acousticness             0.072237\n",
+      "instrumentalness         0.737333\n",
+      "liveness                 0.189952\n",
+      "valence                  0.388335\n",
+      "tempo                  125.153508\n",
+      "duration_ms         251157.883436\n",
       "dtype: float64\n",
       "\n"
      ]
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1927,7 +1927,6 @@
       "                                           track_name        track_artist\n",
       "0   I Don't Care (with Justin Bieber) - Loud Luxur...          Ed Sheeran\n",
       "1                     Memories - Dillon Francis Remix            Maroon 5\n",
-      "2                     All the Time - Don Diablo Remix        Zara Larsson\n",
       "4             Someone You Loved - Future Humans Remix       Lewis Capaldi\n",
       "5   Beautiful People (feat. Khalid) - Jack Wins Remix          Ed Sheeran\n",
       "10  Cross Me (feat. Chance the Rapper & PnB Rock) ...          Ed Sheeran\n",
@@ -1936,8 +1935,8 @@
       "17  Say My Name (feat. Bebe Rexha & J Balvin) - Lu...        David Guetta\n",
       "18  Dancing With A Stranger (With Normani) - Cheat...           Sam Smith\n",
       "21     All Around The World (La La La) - Marnik Remix               R3HAB\n",
+      "23       Slow Dance (feat. Ava Max) - Sam Feldt Remix         AJ Mitchell\n",
       "29            When You Leave - Breathe Carolina Remix        Nikki Vianna\n",
-      "31                          Signs - Eden Prince Remix             Starley\n",
       "32                   Ruin My Life - Steve James Remix        Zara Larsson\n",
       "33                                 Torn - KREAM Remix             Ava Max\n",
       "35  Love Me Less (feat. Quinn XCII) - Party Pupils...                 MAX\n",
@@ -1947,14 +1946,15 @@
       "41                                        Higher Love                Kygo\n",
       "42                                         Unlove You    Armin van Buuren\n",
       "46  When It Comes To You - Benny Benassi & BB Team...           Sean Paul\n",
-      "47                              Gone - The Wild Remix          Charli XCX\n",
       "50                                 joy. (R3HAB Remix)  for KING & COUNTRY\n",
-      "58  Loco Contigo (with J. Balvin & Tyga) - Cedric ...            DJ Snake\n",
       "59                  All Star - Breathe Carolina Remix         Smash Mouth\n",
       "62                            With You - Dexter Remix             Kaskade\n",
       "65                              Talk - Disclosure VIP              Khalid\n",
       "66                             Spicy - Majestic Remix         Herve Pagez\n",
-      "67  Don't Leave Me Lonely (feat. Yebba) - Claptone...         Mark Ronson\n"
+      "67  Don't Leave Me Lonely (feat. Yebba) - Claptone...         Mark Ronson\n",
+      "69         Hearts Ain't Gonna Lie - Eden Prince Remix             Arlissa\n",
+      "71                           Post Malone (feat. RANI)           Sam Feldt\n",
+      "72                                       Here With Me          Marshmello\n"
      ]
     }
    ],
